--- a/.config/polybar/modules/battery.ini
+++ b/.config/polybar/modules/battery.ini
@@ -4,27 +4,17 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full-prefix = "   "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+format-full-prefix = "🔋"
+label-full-foreground = ${colors.green}
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = ${colors.red}
-animation-charging-0 = "  "
-animation-charging-1 = "  "
-animation-charging-2 = "  "
-animation-charging-3 = "  "
-animation-charging-4 = "  "
-animation-charging-foreground = ${colors.foreground-alt}
+label-charging-foreground = ${colors.green}
+animation-charging-0 = "🔋 Charging"
+animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-ramp-capacity-0 = "  "
-ramp-capacity-1 = "  "
-ramp-capacity-2 = "  "
-ramp-capacity-3 = "  "
-ramp-capacity-4 = "  "
+label-discharging-foreground = ${colors.green}
+ramp-capacity-0 = "🔋"
 ramp-capacity-foreground = ${colors.foreground-alt}
 ramp-capacity-framerate = 750
-
