--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -1,7 +1,6 @@
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "  "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = ${colors.orange}
+format-prefix = "⚙ "
 label = %percentage:2%%
+label-foreground = ${colors.cyan}
