--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -8,9 +8,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = ${colors.purple}
+format-prefix = "⏱"
 
 label = %date% %time%
 
