--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -1,7 +1,6 @@
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "  "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = ${colors.green}
+format-prefix = "🛠 "
 label = %percentage_used%%
+label-foreground = ${colors.cyan}
