--- a/.config/polybar/modules/temperature.ini
+++ b/.config/polybar/modules/temperature.ini
@@ -3,17 +3,10 @@ type = internal/temperature
 thermal-zone = 0
 warn-temperature = 60
 
-format = <ramp> <label>
-format-underline = ${colors.yellow}
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+format =  <label>
+format-warn = <label-warn>
 
-label = %temperature-c%
-label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = " "
-ramp-1 = " "
-ramp-2 = " "
-ramp-foreground = ${colors.foreground-alt}
-
+label = ❄ %temperature-c%
+label-foreground = ${colors.cyan}
+label-warn =🔥 %temperature-c%
+label-warn-foreground = ${colors.red}
