--- a/.config/polybar/modules/uptime.ini
+++ b/.config/polybar/modules/uptime.ini
@@ -4,7 +4,5 @@ interval = 60
 exec = uptime -p | sed -e 's/up //g'
 label = %output%
 
-format-prefix = "  "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = ${colors.purple}
-
+label-foreground = ${colors.red}
+format-prefix = "🚀 "
