--- a/.config/polybar/fonts.ini
+++ b/.config/polybar/fonts.ini
@@ -2,3 +2,4 @@ font-0 = Iosevka Nerd Font:style=Regular:pixelsize=10;1
 font-1 = Font Awesome 5 Free:style=Regular:pixelsize=12;1
 font-2 = Font Awesome 5 Brands:style=Regular:pixelsize=12;1
 font-3 = Font Awesome 5 Free:style=Solid:pixelsize=12;1
+font-4 = Noto Color Emoji:style=Regular:scale=10;1
