--- a/.config/polybar/include-modules.ini
+++ b/.config/polybar/include-modules.ini
@@ -6,9 +6,12 @@ include-file = $HOME/.config/polybar/modules/bspwm.ini
 include-file = $HOME/.config/polybar/modules/cpu.ini
 include-file = $HOME/.config/polybar/modules/date.ini
 include-file = $HOME/.config/polybar/modules/eth.ini
+include-file = $HOME/.config/polybar/modules/filesystem.ini
+include-file = $HOME/.config/polybar/modules/keyboard.ini
 include-file = $HOME/.config/polybar/modules/memory.ini
 include-file = $HOME/.config/polybar/modules/powermenu.ini
 include-file = $HOME/.config/polybar/modules/pulseaudio.ini
+include-file = $HOME/.config/polybar/modules/separator.ini
 include-file = $HOME/.config/polybar/modules/temperature.ini
 include-file = $HOME/.config/polybar/modules/uptime.ini
 include-file = $HOME/.config/polybar/modules/wlan.ini
