--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -1,21 +1,27 @@
 [module/bspwm]
 type = internal/bspwm
 
-label-focused = %index%
+ws-icon-0 = 1;󾠮
+ws-icon-1 = 2;󾠯
+ws-icon-2 = 3;󾠰
+ws-icon-3 = 4;󾠱
+ws-icon-4 = 5;󾠲
+ws-icon-default = 😎♟
+
+label-focused = %icon%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.blue}
-label-focused-padding = 2
+label-focused-padding = 1
 
-label-occupied = %index%
-label-occupied-padding = 2
+label-occupied = %icon%
+label-occupied-padding = 1
 
-label-urgent = %index%!
+label-urgent = %icon%!
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 1
 
-label-empty = %index%
+label-empty = %icon%
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-empty-padding = 1
 
 ; Separator in between workspaces
 ; label-separator = |
