--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -3,18 +3,13 @@ type = internal/pulseaudio
 
 format-volume =<ramp-volume> <label-volume>
 label-volume = %percentage%%
-label-volume-foreground = ${root.foreground}
-format-volume-underline = ${colors.cyan}
+label-volume-foreground = ${colors.cyan}
 
-label-muted =  MUTED
-label-muted-foreground = #666
+label-muted = 🔇 MUTED
+label-muted-foreground = ${colors.red}
 
-ramp-volume-0 = " "
-ramp-volume-0-foreground = ${colors.foreground-alt}
-ramp-volume-1 = " "
-ramp-volume-1-foreground = ${colors.foreground-alt}
-ramp-volume-2 = " "
-ramp-volume-2-foreground = ${colors.foreground-alt}
+ramp-volume-0 = "🔈"
+ramp-volume-1 = "🔉"
+ramp-volume-2 = "🔊"
 
 click-right = pavucontrol &
-
