--- a/.config/polybar/modules/wlan.ini
+++ b/.config/polybar/modules/wlan.ini
@@ -13,10 +13,10 @@ format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected = %ifname% disconnected
 label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = "  "
-ramp-signal-1 = "  "
-ramp-signal-2 = "  "
-ramp-signal-3 = "  "
-ramp-signal-4 = "  "
+ramp-signal-0 = "☠ "
+ramp-signal-1 = "☠ "
+ramp-signal-2 = "☠ "
+ramp-signal-3 = "☠ "
+ramp-signal-4 = "☠ "
 ramp-signal-foreground = ${colors.foreground-alt}
 
