Add new modules

--- a/.config/polybar/include-modules.ini
+++ b/.config/polybar/include-modules.ini
@@ -1,5 +1,10 @@
 include-file = $HOME/.config/polybar/colors.ini
 
+include-file = $HOME/.config/polybar/modules/margin.ini
+
+include-file = $HOME/.config/polybar/modules/sepleft.ini
+include-file = $HOME/.config/polybar/modules/sepright.ini
+
 include-file = $HOME/.config/polybar/modules/apps.ini
 include-file = $HOME/.config/polybar/modules/battery.ini
 include-file = $HOME/.config/polybar/modules/bspwm.ini
