--- a/.config/polybar/modules/battery.ini
+++ b/.config/polybar/modules/battery.ini
@@ -4,17 +4,47 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full-prefix = "🔋"
+format-full-prefix = "   "
+format-full-prefix-foreground = ${colors.green}
 label-full-foreground = ${colors.green}
 
 format-charging = <animation-charging> <label-charging>
 label-charging-foreground = ${colors.green}
-animation-charging-0 = "🔋 Charging"
+animation-charging-0 = "  Charging"
+animation-charging-1 = "  Charging"
+animation-charging-2 = "  Charging"
+animation-charging-3 = "  Charging"
+animation-charging-4 = "  Charging"
 animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity> <label-discharging>
 label-discharging-foreground = ${colors.green}
-ramp-capacity-0 = "🔋"
-ramp-capacity-foreground = ${colors.foreground-alt}
+ramp-capacity-0 = "  "
+ramp-capacity-1 = "  "
+ramp-capacity-2 = "  "
+ramp-capacity-3 = "  "
+ramp-capacity-4 = "  "
+ramp-capacity-foreground = ${colors.green}
 ramp-capacity-framerate = 750
+
+;[module/battery]
+;type = internal/battery
+;battery = BAT0
+;adapter = AC0
+;full-at = 98
+;
+;format-full-prefix = "🔋"
+;label-full-foreground = ${colors.green}
+;
+;format-charging = <animation-charging> <label-charging>
+;label-charging-foreground = ${colors.green}
+;animation-charging-0 = "🔋 Charging"
+;animation-charging-foreground = ${colors.green}
+;animation-charging-framerate = 750
+;
+;format-discharging = <ramp-capacity> <label-discharging>
+;label-discharging-foreground = ${colors.green}
+;ramp-capacity-0 = "🔋"
+;ramp-capacity-foreground = ${colors.green}
+;ramp-capacity-framerate = 750
