--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -1,6 +1,6 @@
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "⚙ "
-label = %percentage:2%%
-label-foreground = ${colors.cyan}
+format-prefix = "🔮 "
+label =CPU:%percentage:2%%
+label-foreground = ${colors.purple}
