--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -1,6 +1,6 @@
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "🛠 "
-label = %percentage_used%%
-label-foreground = ${colors.cyan}
+format-prefix = "💛 "
+label =MEM: %percentage_used%%
+label-foreground = ${colors.yellow}
