--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -18,12 +18,12 @@ border-color = #00000000
 
 padding-left = 2
 
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 0
+module-margin-right = 0
 
-modules-left = bspwm filesystem
-modules-center = xwindow
-modules-right = uptime pulseaudio memory cpu temperature battery date separator
+modules-left = bspwm margin xwindow
+modules-center =
+modules-right = sepleft uptime sepright margin sepleft pulseaudio sepright margin sepleft memory sepright margin sepleft cpu sepright margin sepleft temperature sepright margin sepleft battery sepright margin sepleft date sepright
 
 include-file = $HOME/.config/polybar/fonts.ini
 
