--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -2,14 +2,14 @@
 type = internal/pulseaudio
 
 format-volume =<ramp-volume> <label-volume>
-label-volume = %percentage%%
-label-volume-foreground = ${colors.cyan}
+label-volume = VOL: %percentage%%
+label-volume-foreground = ${colors.pink}
 
 label-muted = 🔇 MUTED
 label-muted-foreground = ${colors.red}
 
-ramp-volume-0 = "🔈"
-ramp-volume-1 = "🔉"
-ramp-volume-2 = "🔊"
+ramp-volume-0 = "🦄"
+ramp-volume-1 = "🦄"
+ramp-volume-2 = "🦄"
 
 click-right = pavucontrol &
