--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -1,25 +1,20 @@
 [module/bspwm]
 type = internal/bspwm
 
-ws-icon-0 = 1;󾠮
-ws-icon-1 = 2;󾠯
-ws-icon-2 = 3;󾠰
-ws-icon-3 = 4;󾠱
-ws-icon-4 = 5;󾠲
-ws-icon-default = 😎♟
+pin-workspaces = true
 
-label-focused = %icon%
+label-focused = %index%
 label-focused-background = ${colors.background-alt}
 label-focused-padding = 1
 
-label-occupied = %icon%
+label-occupied = %index%
 label-occupied-padding = 1
 
-label-urgent = %icon%!
+label-urgent = %index%!
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-label-empty = %icon%
+label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 1
 
