--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,7 +1,43 @@
 include-file = $HOME/.config/polybar/include-modules.ini
 
 [bar/main]
-monitor = ${env:MONITOR:HDMI1}
+monitor = eDP1
+width = 100%
+height = 27
+radius = 0.0
+fixed-center = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+line-color = #f00
+
+border-size = 0
+border-color = #00000000
+
+padding-left = 2
+
+module-margin-left = 0
+module-margin-right = 0
+
+modules-left = bspwm margin xwindow
+modules-center = 
+modules-right = sepleft uptime sepright margin sepleft backlight sepright margin sepleft pulseaudio sepright margin sepleft memory sepright margin sepleft cpu sepright margin sepleft temperature sepright margin sepleft battery sepright margin sepleft date sepright
+
+include-file = $HOME/.config/polybar/fonts.ini
+
+tray-position = right
+tray-padding = 4
+
+wm-restack = bspwm
+;override-redirect = true
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/secondary]
+monitor = HDMI1
 width = 100%
 height = 27
 radius = 0.0
@@ -27,7 +63,7 @@ modules-right = sepleft uptime sepright margin sepleft pulseaudio sepright margi
 
 include-file = $HOME/.config/polybar/fonts.ini
 
-tray-position = right
+tray-position = none
 tray-padding = 4
 
 wm-restack = bspwm
