--- a/.config/polybar/include-modules.ini
+++ b/.config/polybar/include-modules.ini
@@ -6,6 +6,7 @@ include-file = $HOME/.config/polybar/modules/sepleft.ini
 include-file = $HOME/.config/polybar/modules/sepright.ini
 
 include-file = $HOME/.config/polybar/modules/apps.ini
+include-file = $HOME/.config/polybar/modules/backlight.ini
 include-file = $HOME/.config/polybar/modules/battery.ini
 include-file = $HOME/.config/polybar/modules/bspwm.ini
 include-file = $HOME/.config/polybar/modules/cpu.ini
