--- a/.config/polybar/include-modules.ini
+++ b/.config/polybar/include-modules.ini
@@ -2,6 +2,9 @@ include-file = $HOME/.config/polybar/colors.ini
 
 include-file = $HOME/.config/polybar/modules/margin.ini
 
+include-file = $HOME/.config/polybar/modules/round-left.ini
+include-file = $HOME/.config/polybar/modules/round-right.ini
+
 include-file = $HOME/.config/polybar/modules/sepleft.ini
 include-file = $HOME/.config/polybar/modules/sepright.ini
 
