--- a/.config/polybar/modules/backlight.ini
+++ b/.config/polybar/modules/backlight.ini
@@ -6,13 +6,15 @@ card = intel_backlight
 enable-scroll = true
 
 format = <ramp> <label>
-format-padding = 1
 
-label = SCREEN: %percentage%%
-label-foreground = ${colors.yellow}
+label = %percentage%
+label-foreground = ${colors.foreground}
 
-ramp-0 = 🌑
-ramp-1 = 🌘
-ramp-2 = 🌗
-ramp-3 = 🌖
-ramp-4 = 🌕
+ramp-0 =  
+ramp-1 =  
+ramp-2 =  
+ramp-3 =  
+ramp-4 =  
+
+ramp-padding-right = 1
+ramp-foreground = ${colors.blue}
