--- a/.config/polybar/modules/battery.ini
+++ b/.config/polybar/modules/battery.ini
@@ -4,47 +4,29 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full-prefix = "   "
+format-full-prefix =  
 format-full-prefix-foreground = ${colors.green}
-label-full-foreground = ${colors.green}
+label-full-foreground = ${colors.grey}
+format-full-prefix-padding-left = 1
 
 format-charging = <animation-charging> <label-charging>
-label-charging-foreground = ${colors.green}
-animation-charging-0 = "  Charging"
-animation-charging-1 = "  Charging"
-animation-charging-2 = "  Charging"
-animation-charging-3 = "  Charging"
-animation-charging-4 = "  Charging"
-animation-charging-foreground = ${colors.green}
+label-charging-foreground = #DF8890
+animation-charging-0 =   
+animation-charging-1 =   
+animation-charging-2 =   
+animation-charging-3 =   
+animation-charging-4 =   
+animation-charging-padding = 1
+animation-charging-foreground = #DF8890
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity> <label-discharging>
-label-discharging-foreground = ${colors.green}
-ramp-capacity-0 = "  "
-ramp-capacity-1 = "  "
-ramp-capacity-2 = "  "
-ramp-capacity-3 = "  "
-ramp-capacity-4 = "  "
+label-discharging-foreground = ${colors.grey}
+ramp-capacity-0 =   
+ramp-capacity-1 =   
+ramp-capacity-2 =   
+ramp-capacity-3 =   
+ramp-capacity-4 =   
+ramp-capacity-padding = 1
 ramp-capacity-foreground = ${colors.green}
 ramp-capacity-framerate = 750
-
-;[module/battery]
-;type = internal/battery
-;battery = BAT0
-;adapter = AC0
-;full-at = 98
-;
-;format-full-prefix = "🔋"
-;label-full-foreground = ${colors.green}
-;
-;format-charging = <animation-charging> <label-charging>
-;label-charging-foreground = ${colors.green}
-;animation-charging-0 = "🔋 Charging"
-;animation-charging-foreground = ${colors.green}
-;animation-charging-framerate = 750
-;
-;format-discharging = <ramp-capacity> <label-discharging>
-;label-discharging-foreground = ${colors.green}
-;ramp-capacity-0 = "🔋"
-;ramp-capacity-foreground = ${colors.green}
-;ramp-capacity-framerate = 750
