--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -5,10 +5,12 @@ interval = 5
 date =
 date-alt = " %Y-%m-%d"
 
-time = %H:%M
-time-alt = %H:%M:%S
+time = %I:%M %p%{F-}
+time-alt = %{F#61afef}󰃭 %a, %b %d%{F-}
 
-format-prefix = "⏱"
+format-prefix = 󰥔  
+format-prefix-foreground = ${colors.grey}
+format-prefix-padding-left = 1
 
 label = %date% %time%
-
+label-foreground = ${colors.grey}
