--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -1,6 +1,8 @@
 [module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "💛 "
-label =MEM: %percentage_used%%
-label-foreground = ${colors.yellow}
+type = custom/script
+exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
+format-prefix = 󰘚 
+format-prefix-foreground = ${colors.yellow}
+format-prefix-padding = 1
+label = %output% MB
+label-foreground = ${colors.grey}
