--- a/.config/polybar/modules/powermenu.ini
+++ b/.config/polybar/modules/powermenu.ini
@@ -3,10 +3,8 @@ type = custom/menu
 
 expand-right = true
 
-format-spacing = 1
-
-label-open ="" 
-label-open-foreground = ${colors.red}
+label-open =  
+label-open-foreground = ${colors.blue}
 label-close =  cancel
 label-close-foreground = ${colors.red}
 label-separator = |
