--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -2,14 +2,18 @@
 type = internal/pulseaudio
 
 format-volume =<ramp-volume> <label-volume>
-label-volume = VOL: %percentage%%
-label-volume-foreground = ${colors.pink}
+label-volume = %percentage%%
+label-volume-foreground = ${colors.grey}
 
-label-muted = 🔇 MUTED
+label-muted =󰎊 MUTED
 label-muted-foreground = ${colors.red}
+label-muted-padding-left = 1
 
-ramp-volume-0 = "🦄"
-ramp-volume-1 = "🦄"
-ramp-volume-2 = "🦄"
+ramp-volume-0 = 󰎄 
+ramp-volume-1 = 󰎄 
+ramp-volume-2 = 󰎄 
+
+ramp-volume-foreground = ${colors.grey}
+ramp-volume-padding-left = 1
 
 click-right = pavucontrol &
