--- a/.config/polybar/modules/temperature.ini
+++ b/.config/polybar/modules/temperature.ini
@@ -3,10 +3,17 @@ type = internal/temperature
 thermal-zone = 0
 warn-temperature = 60
 
-format =  <label>
-format-warn = <label-warn>
+format = <ramp> <label>
+format-warn = <ramp> <label-warn>
 
-label = ❄ %temperature-c%
-label-foreground = ${colors.cyan}
-label-warn =🔥 %temperature-c%
+label = %temperature-c%
+label-warn = %temperature-c%
+
+ramp-0 = 󰜗 
+ramp-1 = 󰜗 
+ramp-2 = 󰈸  
+
+label-foreground = ${colors.grey}
 label-warn-foreground = ${colors.red}
+ramp-foreground = ${colors.cyan}
+ramp-padding-left = 1
