--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,9 @@
-font_family Iosevka Nerd Font
+font_family JetBrainsMono Nerd Font
 bold_font auto
 italic_font auto
 bold_italic_font auto
 font_size 12.0
+
+window_padding_width 6
 
 include ./colors.conf
