--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,29 +1,36 @@
-include-file = $HOME/.config/polybar/include-modules.ini
+[global/wm]
+include-file = $HOME/.config/polybar/modules.ini
+include-file = $HOME/.config/polybar/colors.ini
 
 [bar/main]
 monitor = eDP1
-width = 100%
-height = 27
-radius = 0.0
+width = 98%
+height = 26
 fixed-center = true
+
+offset-x = 1%
+offset-y = 1%
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
-line-color = #f00
+border-top-size = 7
+border-bottom-size = 7
 
-border-size = 0
-border-color = #00000000
+border-top-color = ${colors.background}
+border-bottom-color = ${colors.background}
+
+line-size = 3
 
 padding-left = 2
+padding-right = 1
 
 module-margin-left = 0
 module-margin-right = 0
 
-modules-left = bspwm margin xwindow
+modules-left = bspwm
 modules-center = 
-modules-right = sepleft uptime sepright margin sepleft backlight sepright margin sepleft pulseaudio sepright margin sepleft memory sepright margin sepleft cpu sepright margin sepleft temperature sepright margin sepleft battery sepright margin sepleft date sepright
+modules-right = backlight margin pulseaudio margin memory margin cpu margin temperature margin battery margin date margin wlan margin powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -31,35 +38,38 @@ tray-position = right
 tray-padding = 4
 
 wm-restack = bspwm
-;override-redirect = true
 
 cursor-click = pointer
-cursor-scroll = ns-resize
 
 [bar/secondary]
 monitor = HDMI1
-width = 100%
-height = 27
-radius = 0.0
+width = 98%
+height = 26
 fixed-center = true
+
+offset-x = 1%
+offset-y = 1%
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
-line-color = #f00
+border-top-size = 7
+border-bottom-size = 7
 
-border-size = 0
-border-color = #00000000
+border-top-color = ${colors.background}
+border-bottom-color = ${colors.background}
+
+line-size = 3
 
 padding-left = 2
+padding-right = 1
 
 module-margin-left = 0
 module-margin-right = 0
 
-modules-left = bspwm margin xwindow
+modules-left = bspwm
 modules-center =
-modules-right = sepleft uptime sepright margin sepleft pulseaudio sepright margin sepleft memory sepright margin sepleft cpu sepright margin sepleft temperature sepright margin sepleft battery sepright margin sepleft date sepright
+modules-right = pulseaudio margin memory margin cpu margin temperature margin battery margin date margin wlan margin powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -67,14 +77,5 @@ tray-position = none
 tray-padding = 4
 
 wm-restack = bspwm
-;override-redirect = true
 
 cursor-click = pointer
-cursor-scroll = ns-resize
-
-[settings]
-screenchange-reload = true
-
-[global/wm]
-margin-top = 5
-margin-bottom = 5
