--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -1,6 +1,8 @@
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "🔮 "
-label =CPU:%percentage:2%%
+format-prefix = 󰒓 
+format-prefix-foreground = ${colors.purple}
+format-prefix-padding = 1
+label = CPU %percentage:2%%
 label-foreground = ${colors.purple}
