--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,14 +1,9 @@
-# Nord Colorscheme for Kitty
-# Based on:
-# - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
-# - https://github.com/arcticicestudio/nord-hyper
-
 foreground            #D8DEE9
 background            #1A1A1A
 selection_foreground  #000000
-selection_background  #FFFACD
+selection_background  #BF616A
 url_color             #0087BD
-cursor                #81A1C1
+cursor                #BF616A
 
 # black
 color0   #3B4252
