Update BSPWM and Polybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -11,7 +11,7 @@ format-prefix = 󰒓
 format-prefix-foreground = ${colors.purple}
 format-prefix-padding = 1
 label = CPU %percentage:0%%
-label-foreground = ${colors.purple}
+label-foreground = ${colors.grey}
 
 [module/backlight]
 type = internal/xbacklight
@@ -188,18 +188,22 @@ format-spacing = 1
 
 label-open = 󰤆
 label-open-foreground = ${colors.red}
-label-close = cancel
-label-close-foreground = ${colors.red}
+label-close = 󰌑 Return
+label-close-foreground = ${colors.grey}
 label-separator = 󰑂
 label-separator-foreground = ${colors.grey}
 
-menu-0-0 = reboot
+menu-0-0 = 󰋚 Reboot
+menu-0-0-foreground = ${colors.grey}
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = 󰤆 Shutdown
+menu-0-1-foreground = ${colors.grey}
 menu-0-1-exec = menu-open-2
 
-menu-1-0 = reboot
-menu-1-0-exec = sudo reboot
+menu-1-0 = 󰋚 Reboot
+menu-1-0-foreground = ${colors.grey}
+menu-1-0-exec = reboot
 
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
+menu-2-0 = 󰤆 Shutdown
+menu-2-0-foreground = ${colors.grey}
+menu-2-0-exec = poweroff
