--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,7 +1,7 @@
 [colors]
 background = #1A1A1A
 background-alt = #2E2E2E
-foreground = #D8DEE
+foreground = #D8DEE8
 foreground-alt = #e5e9f0
 cyan = #88c0d0
 green = #a3be8c
