--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -75,20 +75,31 @@ ramp-capacity-framerate = 750
 [module/bspwm]
 type = internal/bspwm
 
-pin-workspaces = true
+ws-icon-0 = "1;󱠿"
+ws-icon-1 = "2;󰜃"
+ws-icon-2 = "3;󱡁"
+ws-icon-3 = "4;󱡂"
+ws-icon-4 = "5;󰞇"
+ws-icon-5 = "6;󱠿"
+ws-icon-6 = "7;󰜃"
+ws-icon-7 = "8;󱡁"
+ws-icon-8 = "9;󱡂"
+ws-icon-9 = "10;󰞇"
 
-label-focused = %index%
+format = <label-state> <label-mode>
+
+label-focused = %icon%
 label-focused-background = ${colors.background-alt}
 label-focused-padding = 1
 
-label-occupied = %index%
+label-occupied = %icon%
 label-occupied-padding = 1
 
-label-urgent = %index%!
+label-urgent = %icon%!
 label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
-label-empty = %index%
+label-empty = %icon%
 label-empty-foreground = ${colors.grey}
 label-empty-padding = 1
 
@@ -167,15 +178,15 @@ format-connected = <ramp-signal>
 ;label-connected =%{A1:kitty -e nmtui &:}%essid%%{A}
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:kitty -e nmtui &:}󰤮 %{A}
+label-disconnected = %{A1:kitty -e nmtui &:}󰤮%{A}
 label-disconnected-foreground = ${colors.red}
 label-disconnected-padding-left = 1
 
-ramp-signal-0 = %{A1:kitty -e nmtui &:}󰤯 %{A}
-ramp-signal-1 = %{A1:kitty -e nmtui &:}󰤟 %{A}
-ramp-signal-2 = %{A1:kitty -e nmtui &:}󰤢 %{A}
-ramp-signal-3 = %{A1:kitty -e nmtui &:}󰤥 %{A}
-ramp-signal-4 = %{A1:kitty -e nmtui &:}󰤨 %{A}
+ramp-signal-0 = %{A1:kitty -e nmtui &:}󰤯%{A}
+ramp-signal-1 = %{A1:kitty -e nmtui &:}󰤟%{A}
+ramp-signal-2 = %{A1:kitty -e nmtui &:}󰤢%{A}
+ramp-signal-3 = %{A1:kitty -e nmtui &:}󰤥%{A}
+ramp-signal-4 = %{A1:kitty -e nmtui &:}󰤨%{A}
 ramp-signal-foreground = ${colors.blue}
 ramp-signal-padding-left = 1
 
