Update to Nord theme

--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,9 +1,9 @@
 foreground            #D8DEE9
-background            #1A1A1A
+background            #2E3440
 selection_foreground  #000000
-selection_background  #BF616A
+selection_background  #FFFACD
 url_color             #0087BD
-cursor                #BF616A
+cursor                #81A1C1
 
 # black
 color0   #3B4252
