Some .config updates

--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,9 +1,9 @@
 foreground            #D8DEE9
-background            #2E3440
+background            #1A1A1A
 selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-cursor                #81A1C1
+selection_background  #bf616a
+url_color             #bf616a
+cursor                #bf616a
 
 # black
 color0   #3B4252
