--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,6 +1,6 @@
 [colors]
-background = #2e3440
-background-alt = #4c566a
+background = #1A1A1A
+background-alt = #363636
 foreground = #D8DEE8
 foreground-alt = #e5e9f0
 cyan = #88c0d0
