--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,11 @@
-font_family JetBrainsMono Nerd Font
+font_family Iosevka Nerd Font Mono
 bold_font auto
 italic_font auto
 bold_italic_font auto
 font_size 12.0
 
 window_padding_width 6
+
+background_opacity 0.85
 
 include ./colors.conf
