--- a/.config/polybar/fonts.ini
+++ b/.config/polybar/fonts.ini
@@ -1,2 +1,4 @@
-font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=13;4
+font-0 = Iosevka Nerd Font Mono:style=Regular:pixelsize=13;3
 font-1 = Material Design Icons:style=Regular:pixelsize=14;4
+font-2 = Material Design Icons:style=Regular:pixelsize=20;4
+
