--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,50 +1,50 @@
-[module/margin]
-type = custom/text
+	[module/margin]
+	type = custom/text
 
-content ="|"
-content-foreground = ${colors.transparent}
+	content ="|"
+	content-foreground = ${colors.transparent}
 
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = 󰒓 
-format-prefix-foreground = ${colors.purple}
-format-prefix-padding = 1
-label = CPU %percentage:0%%
-label-foreground = ${colors.grey}
+	[module/cpu]
+	type = internal/cpu
+	interval = 2
+	format-prefix = 󰒓 
+	format-prefix-foreground = ${colors.purple}
+	format-prefix-padding = 1
+	label = CPU %percentage:0%%
+	label-foreground = ${colors.grey}
 
-[module/backlight]
-type = internal/xbacklight
+	[module/backlight]
+	type = internal/xbacklight
 
-card = intel_backlight
+	card = intel_backlight
 
-enable-scroll = true
+	enable-scroll = true
 
-format = <ramp> <label>
+	format = <ramp> <label>
 
-label = %percentage%%
-label-foreground = ${colors.grey}
+	label = %percentage%%
+	label-foreground = ${colors.grey}
 
-ramp-0 = 󰤂
-ramp-1 = 󰪞
-ramp-2 = 󰪟
-ramp-3 = 󰪠
-ramp-4 = 󰪡
-ramp-5 = 󰪢
-ramp-6 = 󰪣
-ramp-7 = 󰪤
-ramp-8 = 󰪥
+	ramp-0 = 󰤂
+	ramp-1 = 󰪞
+	ramp-2 = 󰪟
+	ramp-3 = 󰪠
+	ramp-4 = 󰪡
+	ramp-5 = 󰪢
+	ramp-6 = 󰪣
+	ramp-7 = 󰪤
+	ramp-8 = 󰪥
 
-ramp-padding-right = 0
-ramp-foreground = ${colors.blue}
+	ramp-padding-right = 0
+	ramp-foreground = ${colors.blue}
 
-[module/battery]
+	[module/battery]
 type = internal/battery
 battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full-prefix =  
+format-full-prefix = 󱊣
 format-full-prefix-foreground = ${colors.green}
 label-full-foreground = ${colors.green}
 format-full-prefix-padding-left = 1
@@ -52,39 +52,35 @@ format-full-prefix-padding-right = 2
 
 format-charging = <animation-charging> <label-charging>
 label-charging-foreground = #DF8890
-animation-charging-0 =   
-animation-charging-1 =   
-animation-charging-2 =   
-animation-charging-3 =   
-animation-charging-4 =   
-animation-charging-padding = 1
+animation-charging-0 = 󱊤 
+animation-charging-1 = 󱊥  
+animation-charging-2 = 󱊦  
+animation-charging-padding-left = 1
 animation-charging-foreground = #DF8890
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity> <label-discharging>
 label-discharging-foreground = ${colors.green}
-ramp-capacity-0 =   
-ramp-capacity-1 =   
-ramp-capacity-2 =   
-ramp-capacity-3 =   
-ramp-capacity-4 =   
-ramp-capacity-padding = 1
+ramp-capacity-0 =󱊡
+ramp-capacity-1 =󱊢
+ramp-capacity-2 =󱊣
+ramp-capacity-padding-left = 1
 ramp-capacity-foreground = ${colors.green}
 ramp-capacity-framerate = 750
 
 [module/bspwm]
 type = internal/bspwm
 
-ws-icon-0 = "1;󱠿"
-ws-icon-1 = "2;󰜃"
-ws-icon-2 = "3;󱡁"
-ws-icon-3 = "4;󱡂"
-ws-icon-4 = "5;󰞇"
-ws-icon-5 = "6;󱠿"
-ws-icon-6 = "7;󰜃"
-ws-icon-7 = "8;󱡁"
-ws-icon-8 = "9;󱡂"
-ws-icon-9 = "10;󰞇"
+ws-icon-0 = "1;%{T3}󱂈%{T-}"
+ws-icon-1 = "2;%{T3}󱂉%{T-}"
+ws-icon-2 = "3;%{T3}󱂊%{T-}"
+ws-icon-3 = "4;%{T3}󱂋%{T-}"
+ws-icon-4 = "5;%{T3}󱂌%{T-}"
+ws-icon-5 = "6;%{T3}󱂍%{T-}"
+ws-icon-6 = "7;%{T3}󱂎%{T-}"
+ws-icon-7 = "8;%{T3}󱂏%{T-}"
+ws-icon-8 = "9;%{T3}󱂐%{T-}"
+ws-icon-9 = "10;%{T3}󱂑%{T-}"
 
 format = <label-state> <label-mode>
 
@@ -174,11 +170,12 @@ type = internal/network
 interface = wlo1
 interval = 3.0
 
-format-connected = <ramp-signal>
-;label-connected =%{A1:kitty -e nmtui &:}%essid%%{A}
+format-connected = <ramp-signal> <label-connected>
+label-connected =%{A1:kitty -e nmtui &:}%essid%%{A}
+label-connected-foreground = ${colors.grey}
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:kitty -e nmtui &:}󰤮%{A}
+label-disconnected = %{A1:kitty -e nmtui &:}󰤮 Offline%{A}
 label-disconnected-foreground = ${colors.red}
 label-disconnected-padding-left = 1
 
