--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -6,7 +6,7 @@ url_color             #bf616a
 cursor                #bf616a
 
 # black
-color0   #3B4252
+color0   #1A1A1A
 color8   #4C566A
 
 # red
@@ -22,16 +22,16 @@ color3   #EBCB8B
 color11  #EBCB8B
 
 # blue
-color4  #81A1C1
-color12 #81A1C1
+color4  #D8DEE9
+color12 #D8DEE9
 
 # magenta
 color5   #B48EAD
 color13  #B48EAD
 
 # cyan
-color6   #88C0D0
-color14  #8FBCBB
+color6   #BF616A
+color14  #BF616A
 
 # white
 color7   #E5E9F0
