--- a/.config/polybar/fonts.ini
+++ b/.config/polybar/fonts.ini
@@ -1,4 +1,3 @@
-font-0 = Iosevka Nerd Font Mono:style=Regular:pixelsize=13;3
-font-1 = Material Design Icons:style=Regular:pixelsize=14;4
-font-2 = Material Design Icons:style=Regular:pixelsize=20;4
-
+font-0 = Iosevka Nerd Font:style=Regular:pixelsize=12;3
+font-1 = Iosevka Nerd Font:style=Regular:pixelsize=14;3
+font-2 = Material Design Icons:style=Regular:pixelsize=13;3
