--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,42 +1,30 @@
-[module/margin]
-type = custom/text
-
-content ="|"
-content-foreground = ${colors.transparent}
-
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = 󰒓 
-format-prefix-foreground = ${colors.purple}
-format-prefix-padding = 1
+
+format = <ramp-load> <label>
+format-prefix-foreground = ${colors.white}
+
 label = CPU %percentage:0%%
-label-foreground = ${colors.grey}
+label-foreground = ${colors.white}
+
+ramp-load-0 = 󰒇
 
 [module/backlight]
-type = internal/xbacklight
+type = internal/backlight
 
 card = intel_backlight
 
 enable-scroll = true
 
-format = <ramp> <label>
+format = <ramp>  <label>
 
-label = %percentage%%
-label-foreground = ${colors.grey}
+label = %percentage%
+label-foreground = ${colors.white}
 
-ramp-0 = 󰤂
-ramp-1 = 󰪞
-ramp-2 = 󰪟
-ramp-3 = 󰪠
-ramp-4 = 󰪡
-ramp-5 = 󰪢
-ramp-6 = 󰪣
-ramp-7 = 󰪤
-ramp-8 = 󰪥
+ramp-0 = 盛
 
-ramp-padding-right = 0
-ramp-foreground = ${colors.blue}
+ramp-foreground = ${colors.white}
 
 [module/battery]
 type = internal/battery
@@ -44,59 +32,46 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full-prefix = 󱊣
-format-full-prefix-foreground = ${colors.green}
-label-full-foreground = ${colors.green}
-format-full-prefix-padding-left = 1
-format-full-prefix-padding-right = 1
+format-full = <ramp-capacity> <label-full>
+label-full-foreground = ${colors.white}
 
-format-charging = <animation-charging> <label-charging>
-label-charging-foreground = #DF8890
-animation-charging-0 = 󱊤 
-animation-charging-1 = 󱊥  
-animation-charging-2 = 󱊦  
-animation-charging-padding-left = 1
-animation-charging-foreground = #DF8890
+format-charging = <animation-charging>   <label-charging>
+label-charging-foreground = ${colors.white} 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 =  
+animation-charging-4 = 
+animation-charging-foreground = ${colors.white}
 animation-charging-framerate = 750
 
-format-discharging = <ramp-capacity> <label-discharging>
-label-discharging-foreground = ${colors.green}
-ramp-capacity-0 =󱊡
-ramp-capacity-1 =󱊢
-ramp-capacity-2 =󱊣
-ramp-capacity-padding-left = 1
-ramp-capacity-foreground = ${colors.green}
+format-discharging = <ramp-capacity>   <label-discharging>
+label-discharging-foreground = ${colors.white}
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-foreground = ${colors.white}
 ramp-capacity-framerate = 750
 
 [module/bspwm]
 type = internal/bspwm
 
-ws-icon-0 = "1;%{T3}󱂈%{T-}"
-ws-icon-1 = "2;%{T3}󱂉%{T-}"
-ws-icon-2 = "3;%{T3}󱂊%{T-}"
-ws-icon-3 = "4;%{T3}󱂋%{T-}"
-ws-icon-4 = "5;%{T3}󱂌%{T-}"
-ws-icon-5 = "6;%{T3}󱂍%{T-}"
-ws-icon-6 = "7;%{T3}󱂎%{T-}"
-ws-icon-7 = "8;%{T3}󱂏%{T-}"
-ws-icon-8 = "9;%{T3}󱂐%{T-}"
-ws-icon-9 = "10;%{T3}󱂑%{T-}"
-
 format = <label-state> <label-mode>
 
-label-focused = %icon%
-label-focused-background = ${colors.background-alt}
+label-focused = 󰄯
 label-focused-padding = 1
 
-label-occupied = %icon%
+label-occupied = 󰐾
 label-occupied-padding = 1
 
-label-urgent = %icon%!
+label-urgent = 󰐾
 label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
-label-empty = %icon%
-label-empty-foreground = ${colors.grey}
+label-empty = 󰄰
+label-empty-foreground = ${colors.white}
 label-empty-padding = 1
 
 [module/date]
@@ -107,41 +82,37 @@ date =
 date-alt = " %Y-%m-%d"
 
 time = %I:%M %p%{F-}
-time-alt = %{F#61afef}󰃭 %a, %b %d%{F-}
+time-alt = %{F#ffffff}󰃭 %a, %b %d%{F-}
 
 format-prefix = 󰥔  
-format-prefix-foreground = ${colors.grey}
-format-prefix-padding-left = 1
+format-prefix-foreground = ${colors.white}
 
 label = %date% %time%
-label-foreground = ${colors.grey}
+label-padding-right = 1
+label-foreground = ${colors.white}
 
 [module/memory]
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
-format-prefix = 󰘚 
-format-prefix-foreground = ${colors.yellow}
-format-prefix-padding = 1
+
+format-prefix = "󰍛 " 
+format-prefix-foreground = ${colors.white}
 label = %output% MB
-label-foreground = ${colors.grey}
+label-foreground = ${colors.white}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume =<ramp-volume> <label-volume>
+format-volume =<ramp-volume>  <label-volume>
 label-volume = %percentage%%
-label-volume-foreground = ${colors.grey}
+label-volume-foreground = ${colors.white}
 
-label-muted =󰎊 MUTED
-label-muted-foreground = ${colors.red}
-label-muted-padding-left = 1
+label-muted =%{T3}婢 %{T-} MUTED
+label-muted-foreground = ${colors.white}
 
-ramp-volume-0 = 󰝚 
-ramp-volume-1 = 󰝚 
-ramp-volume-2 = 󰝚 
+ramp-volume-0 = %{T2}墳%{T-}
 
-ramp-volume-foreground = ${colors.red}
-ramp-volume-padding-left = 1
+ramp-volume-foreground = ${colors.white}
 
 click-right = pavucontrol &
 
@@ -156,62 +127,37 @@ format-warn = <ramp> <label-warn>
 label = %temperature-c%
 label-warn = %temperature-c%
 
-ramp-0 = 󰜗 
-ramp-1 = 󰜗 
-ramp-2 = 󰈸  
+ramp-0 = 󰔐
 
-label-foreground = ${colors.grey}
-label-warn-foreground = ${colors.red}
-ramp-foreground = ${colors.cyan}
-ramp-padding-left = 1
+label-foreground = ${colors.white}
+label-warn-foreground = ${colors.white}
+ramp-foreground = ${colors.white}
 
 [module/wlan]
 type = internal/network
 interface = wlo1
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
-label-connected =%{A1:kitty -e nmtui &:}%essid%%{A}
-label-connected-foreground = ${colors.grey}
+format-connected = <ramp-signal>  <label-connected>
+label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
+label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:kitty -e nmtui &:}󰤮 Offline%{A}
-label-disconnected-foreground = ${colors.red}
-label-disconnected-padding-left = 1
+label-disconnected = %{A1:alacritty -e nmtui &:}睊  Offline%{A}
+label-disconnected-foreground = ${colors.white}
 
-ramp-signal-0 = %{A1:kitty -e nmtui &:}󰤯%{A}
-ramp-signal-1 = %{A1:kitty -e nmtui &:}󰤟%{A}
-ramp-signal-2 = %{A1:kitty -e nmtui &:}󰤢%{A}
-ramp-signal-3 = %{A1:kitty -e nmtui &:}󰤥%{A}
-ramp-signal-4 = %{A1:kitty -e nmtui &:}󰤨%{A}
-ramp-signal-foreground = ${colors.blue}
-ramp-signal-padding-left = 1
+ramp-signal-0 = %{A1:alacritty -e nmtui &:}直%{A}
+ramp-signal-foreground = ${colors.white}
 
-[module/powermenu]
-type = custom/menu
+[module/round-left]
+type = custom/text
+content = %{T4}%{T-}
+content-foreground = #2b2f37
 
-expand-right = true
+[module/round-right]
+type = custom/text
+content = %{T4}%{T-}
+content-foreground = #2b2f37
 
-format-spacing = 1
 
-label-open = 󰤆
-label-open-foreground = ${colors.red}
-label-close = 󰌑 Return
-label-close-foreground = ${colors.grey}
-label-separator = 󰑂
-label-separator-foreground = ${colors.grey}
 
-menu-0-0 = 󰋚 Reboot
-menu-0-0-foreground = ${colors.grey}
-menu-0-0-exec = menu-open-1
-menu-0-1 = 󰤆 Shutdown
-menu-0-1-foreground = ${colors.grey}
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = 󰋚 Reboot
-menu-1-0-foreground = ${colors.grey}
-menu-1-0-exec = reboot
-
-menu-2-0 = 󰤆 Shutdown
-menu-2-0-foreground = ${colors.grey}
-menu-2-0-exec = poweroff
