--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -3,6 +3,7 @@ background = #1A1A1A
 background-alt = #363636
 foreground = #D8DEE8
 foreground-alt = #e5e9f0
+white = #ffffff
 cyan = #88c0d0
 green = #a3be8c
 blue = #5e81ac
