--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -6,8 +6,8 @@ include-file = $HOME/.config/polybar/colors.ini
 pseudo-transparency = true
 
 [bar/main]
-monitor = eDP1
-width = 99%
+monitor = eDP-1
+width = 100%
 height = 32
 fixed-center = true
 
@@ -16,23 +16,17 @@ line-size = 3
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-offset-x = 0.5%
-offset-y = 0.5%
-
-radius = 10.0
-
 border-top-color = ${colors.background}
 border-bottom-color = ${colors.background}
 
 padding-left = 1
 padding-right = 1
 
-module-margin-left = 0
-module-margin-right = 0
+module-margin-left = 2
 
 modules-left = bspwm
 modules-center = 
-modules-right = backlight margin pulseaudio margin memory margin cpu margin temperature margin battery margin wlan margin date
+modules-right = backlight pulseaudio memory cpu temperature battery wlan date
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -44,8 +38,8 @@ wm-restack = bspwm
 cursor-click = pointer
 
 [bar/secondary]
-monitor = HDMI1
-width = 99%
+monitor = HDMI-1
+width = 100%
 height = 32
 fixed-center = true
 
@@ -54,23 +48,17 @@ line-size = 3
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-offset-x = 0.5%
-offset-y = 0.5%
-
-radius = 10.0
-
 border-top-color = ${colors.background}
 border-bottom-color = ${colors.background}
 
 padding-left = 1
 padding-right = 1
 
-module-margin-left = 0
-module-margin-right = 0
+module-margin-left = 2
 
 modules-left = bspwm
 modules-center =
-modules-right = pulseaudio margin memory margin cpu margin temperature margin battery margin wlan margin date
+modules-right = pulseaudio memory cpu temperature battery wlan date
 
 include-file = $HOME/.config/polybar/fonts.ini
 
