--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -17,12 +17,12 @@ card = intel_backlight
 
 enable-scroll = true
 
-format = <ramp>  <label>
+format = <ramp> <label>
 
 label = %percentage%
 label-foreground = ${colors.white}
 
-ramp-0 = 盛
+ramp-0 = 󰃠
 
 ramp-foreground = ${colors.white}
 
@@ -32,26 +32,26 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full = <ramp-capacity>   <label-full>
+format-full = <ramp-capacity> <label-full>
 label-full-foreground = ${colors.white}
 
-format-charging = <animation-charging>   <label-charging>
+format-charging = <animation-charging> <label-charging>
 label-charging-foreground = ${colors.white} 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 =  
-animation-charging-4 = 
+
+animation-charging-0 = 󱊡
+animation-charging-1 = 󱊢
+animation-charging-2 = 󱊣
+
 animation-charging-foreground = ${colors.white}
 animation-charging-framerate = 750
 
-format-discharging = <ramp-capacity>   <label-discharging>
+format-discharging = <ramp-capacity> <label-discharging>
 label-discharging-foreground = ${colors.white}
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+
+ramp-capacity-0 = 󱊡
+ramp-capacity-1 = 󱊢
+ramp-capacity-2 = 󱊣
+
 ramp-capacity-foreground = ${colors.white}
 ramp-capacity-framerate = 750
 
@@ -94,7 +94,7 @@ label-foreground = ${colors.white}
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
-format-prefix = "  " 
+format-prefix = "󰘚 "  
 format-prefix-foreground = ${colors.white}
 label = %output% MB
 label-foreground = ${colors.white}
@@ -102,14 +102,14 @@ label-foreground = ${colors.white}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume =<ramp-volume>  <label-volume>
+format-volume =<ramp-volume> <label-volume>
 label-volume = %percentage%%
 label-volume-foreground = ${colors.white}
 
-label-muted =%{T3}婢 %{T-} MUTED
+label-muted =󰖁 MUTED
 label-muted-foreground = ${colors.white}
 
-ramp-volume-0 = %{T2}墳%{T-}
+ramp-volume-0 = 󰕾
 
 ramp-volume-foreground = ${colors.white}
 
@@ -137,15 +137,19 @@ type = internal/network
 interface = wlo1
 interval = 3.0
 
-format-connected = <ramp-signal>  <label-connected>
+format-connected = <ramp-signal> <label-connected>
 label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:alacritty -e nmtui &:}睊  Offline%{A}
+label-disconnected = %{A1:alacritty -e nmtui &:}󰤮  Offline%{A}
 label-disconnected-foreground = ${colors.white}
 
-ramp-signal-0 = %{A1:alacritty -e nmtui &:}直%{A}
+ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰤯%{A}
+ramp-signal-1 = %{A1:alacritty -e nmtui &:}󰤟%{A}
+ramp-signal-2 = %{A1:alacritty -e nmtui &:}󰤢%{A}
+ramp-signal-3 = %{A1:alacritty -e nmtui &:}󰤥%{A}
+ramp-signal-4 = %{A1:alacritty -e nmtui &:}󰤨%{A}
 ramp-signal-foreground = ${colors.white}
 
 [module/powermenu]
@@ -175,8 +179,6 @@ menu-2-0-exec = poweroff
 
 [module/fanspeed]
 type = custom/script
-format-prefix = 
-format-prefix-padding-right = 1
+format-prefix = 󰈐
 exec = ~/.config/scripts/fanspeed
 interval = 10
-
