updated some files

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,7 +23,7 @@ module-margin-left = 2
 
 modules-left = bspwm
 modules-center = 
-modules-right = backlight pulseaudio memory cpu temperature fanspeed battery wlan date powermenu
+modules-right = backlight pulseaudio memory cpu temperature fanspeed date powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -52,7 +52,7 @@ module-margin-left = 2
 
 modules-left = bspwm
 modules-center =
-modules-right = pulseaudio memory cpu temperature fanspeed battery wlan date powermenu
+modules-right = pulseaudio memory cpu temperature fanspeed  date powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
