--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -26,35 +26,6 @@ ramp-0 = 󰃠
 
 ramp-foreground = ${colors.white}
 
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = AC0
-full-at = 98
-
-format-full = <ramp-capacity> <label-full>
-label-full-foreground = ${colors.white}
-
-format-charging = <animation-charging> <label-charging>
-label-charging-foreground = ${colors.white} 
-
-animation-charging-0 = 󱊡
-animation-charging-1 = 󱊢
-animation-charging-2 = 󱊣
-
-animation-charging-foreground = ${colors.white}
-animation-charging-framerate = 750
-
-format-discharging = <ramp-capacity> <label-discharging>
-label-discharging-foreground = ${colors.white}
-
-ramp-capacity-0 = 󱊡
-ramp-capacity-1 = 󱊢
-ramp-capacity-2 = 󱊣
-
-ramp-capacity-foreground = ${colors.white}
-ramp-capacity-framerate = 750
-
 [module/bspwm]
 type = internal/bspwm
 
@@ -94,7 +65,7 @@ label-foreground = ${colors.white}
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
-format-prefix = "󰘚 "  
+format-prefix = "󰆼 "  
 format-prefix-foreground = ${colors.white}
 label = %output% MB
 label-foreground = ${colors.white}
@@ -131,26 +102,6 @@ ramp-0 = 󰔐
 label-foreground = ${colors.white}
 label-warn-foreground = ${colors.white}
 ramp-foreground = ${colors.white}
-
-[module/wlan]
-type = internal/network
-interface = wlo1
-interval = 3.0
-
-format-connected = <ramp-signal> <label-connected>
-label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
-label-connected-foreground = ${colors.white}
-
-format-disconnected = <label-disconnected>
-label-disconnected = %{A1:alacritty -e nmtui &:}󰤮  Offline%{A}
-label-disconnected-foreground = ${colors.white}
-
-ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰤯%{A}
-ramp-signal-1 = %{A1:alacritty -e nmtui &:}󰤟%{A}
-ramp-signal-2 = %{A1:alacritty -e nmtui &:}󰤢%{A}
-ramp-signal-3 = %{A1:alacritty -e nmtui &:}󰤥%{A}
-ramp-signal-4 = %{A1:alacritty -e nmtui &:}󰤨%{A}
-ramp-signal-foreground = ${colors.white}
 
 [module/powermenu]
 type = custom/menu
