updated some files

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,7 +1,7 @@
 [colors]
 background = #1A1A1A
 background-alt = #363636
-foreground = #D8DEE8
+foreground = #FFFFFF
 foreground-alt = #e5e9f0
 white = #ffffff
 cyan = #88c0d0
