--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,11 +23,11 @@ module-margin-left = 2
 
 modules-left = bspwm
 modules-center = 
-modules-right = backlight pulseaudio memory cpu temperature fanspeed date powermenu
+modules-right = backlight pulseaudio memory cpu temperature fanspeed battery wlan date powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
-tray-position = right
+tray-position = none
 tray-padding = 2
 
 wm-restack = bspwm
@@ -52,7 +52,7 @@ module-margin-left = 2
 
 modules-left = bspwm
 modules-center =
-modules-right = pulseaudio memory cpu temperature fanspeed  date powermenu
+modules-right = pulseaudio memory cpu temperature fanspeed battery wlan date powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
