--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -133,3 +133,56 @@ type = custom/script
 format-prefix = 󰈐
 exec = ~/.config/scripts/fanspeed
 interval = 10
+
+[module/wlan]
+type = internal/network
+interface = wlo1
+interval = 3.0
+
+format-connected = <ramp-signal> <label-connected>
+label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
+label-connected-foreground = ${colors.white}
+
+format-disconnected = <label-disconnected>
+label-disconnected = %{A1:alacritty -e nmtui &:}󰤮  Offline%{A}
+label-disconnected-foreground = ${colors.white}
+
+ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰤯%{A}
+ramp-signal-1 = %{A1:alacritty -e nmtui &:}󰤟%{A}
+ramp-signal-2 = %{A1:alacritty -e nmtui &:}󰤢%{A}
+ramp-signal-3 = %{A1:alacritty -e nmtui &:}󰤥%{A}
+ramp-signal-4 = %{A1:alacritty -e nmtui &:}󰤨%{A}
+ramp-signal-foreground = ${colors.white}
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = AC0
+full-at = 98
+
+format-full = <ramp-capacity>   <label-full>
+label-full-foreground = ${colors.white}
+
+format-charging = <animation-charging>   <label-charging>
+label-charging-foreground = ${colors.white} 
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 =  
+animation-charging-4 = 
+
+animation-charging-foreground = ${colors.white}
+animation-charging-framerate = 750
+
+format-discharging = <ramp-capacity>   <label-discharging>
+label-discharging-foreground = ${colors.white}
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+ramp-capacity-foreground = ${colors.white}
+ramp-capacity-framerate = 750
