updated some files

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,7 +27,7 @@ modules-right = backlight pulseaudio memory cpu temperature fanspeed battery wla
 
 include-file = $HOME/.config/polybar/fonts.ini
 
-tray-position = none
+tray-position = right
 tray-padding = 2
 
 wm-restack = bspwm
