--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -19,7 +19,7 @@ enable-scroll = true
 
 format = <ramp> <label>
 
-label = %percentage%
+label = %percentage%%
 label-foreground = ${colors.white}
 
 ramp-0 = 󰃠
@@ -73,11 +73,11 @@ label-foreground = ${colors.white}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume =<ramp-volume> <label-volume>
+format-volume =<ramp-volume>
 label-volume = %percentage%%
 label-volume-foreground = ${colors.white}
 
-label-muted =󰖁 MUTED
+label-muted =󰖁
 label-muted-foreground = ${colors.white}
 
 ramp-volume-0 = 󰕾
@@ -139,19 +139,15 @@ type = internal/network
 interface = wlo1
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <ramp-signal>
 label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:alacritty -e nmtui &:}󰤮  Offline%{A}
+label-disconnected = %{A1:alacritty -e nmtui &:}󰖪%{A}
 label-disconnected-foreground = ${colors.white}
 
-ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰤯%{A}
-ramp-signal-1 = %{A1:alacritty -e nmtui &:}󰤟%{A}
-ramp-signal-2 = %{A1:alacritty -e nmtui &:}󰤢%{A}
-ramp-signal-3 = %{A1:alacritty -e nmtui &:}󰤥%{A}
-ramp-signal-4 = %{A1:alacritty -e nmtui &:}󰤨%{A}
+ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩%{A}
 ramp-signal-foreground = ${colors.white}
 
 [module/battery]
@@ -160,29 +156,34 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full = <ramp-capacity>   <label-full>
+format-full = <ramp-capacity> 
 label-full-foreground = ${colors.white}
 
-format-charging = <animation-charging>   <label-charging>
+format-charging = <animation-charging>
 label-charging-foreground = ${colors.white} 
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 =  
-animation-charging-4 = 
+animation-charging-0 = 󰁻
+animation-charging-1 = 󰁽
+animation-charging-2 = 󰁿
+animation-charging-3 = 󰂁 
+animation-charging-4 = 󰁹
 
 animation-charging-foreground = ${colors.white}
 animation-charging-framerate = 750
 
-format-discharging = <ramp-capacity>   <label-discharging>
+format-discharging = <ramp-capacity>
 label-discharging-foreground = ${colors.white}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-0 = 󰁻
+ramp-capacity-1 = 󰁽
+ramp-capacity-2 = 󰁿
+ramp-capacity-3 = 󰂁
+ramp-capacity-4 = 󰁹
 
 ramp-capacity-foreground = ${colors.white}
 ramp-capacity-framerate = 750
+
+[module/bluetooth]
+type = custom/text
+content = 󰂯
+click-left = ~/.config/scripts/toggle-bluetooth
