made some updates

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,8 +22,8 @@ padding-right = 1
 module-margin-left = 2
 
 modules-left = bspwm
-modules-center = 
-modules-right = backlight memory cpu temperature fanspeed date pulseaudio wlan bluetooth battery powermenu
+modules-center = date
+modules-right = memory cpu temperature fanspeed pulseaudio wlan battery powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -51,8 +51,8 @@ padding-right = 1
 module-margin-left = 2
 
 modules-left = bspwm
-modules-center =
-modules-right = memory cpu temperature fanspeed date pulseaudio wlan bluetooth battery powermenu
+modules-center = date
+modules-right = memory cpu temperature fanspeed pulseaudio wlan battery powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
