--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -78,11 +78,11 @@ label-volume = %percentage%%
 label-volume-foreground = ${colors.white}
 
 label-muted =󰖁
-label-muted-foreground = ${colors.white}
+label-muted-foreground = ${colors.red}
 
 ramp-volume-0 = 󰕾
 
-ramp-volume-foreground = ${colors.white}
+ramp-volume-foreground = ${colors.yellow}
 
 click-right = pavucontrol &
 
@@ -104,29 +104,12 @@ label-warn-foreground = ${colors.white}
 ramp-foreground = ${colors.white}
 
 [module/powermenu]
-type = custom/menu
+type = custom/text
 
-expand-right = true
+content = 󰤆
+content-foreground = ${colors.red}
 
-format-spacing = 1
-
-label-open = 󰤆
-label-open-foreground = ${colors.white}
-label-close = cancel
-label-close-foreground = ${colors.red}
-label-separator = 󰑂
-label-separator-foreground = ${colors.grey}
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = reboot
-menu-1-0-exec = reboot
-
-menu-2-0 = power off
-menu-2-0-exec = poweroff
+click-left = ~/.config/scripts/powermenu
 
 [module/fanspeed]
 type = custom/script
@@ -145,10 +128,10 @@ label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
 label-disconnected = %{A1:alacritty -e nmtui &:}󰖪%{A}
-label-disconnected-foreground = ${colors.white}
+label-disconnected-foreground = ${colors.red}
 
 ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩%{A}
-ramp-signal-foreground = ${colors.white}
+ramp-signal-foreground = ${colors.blue}
 
 [module/battery]
 type = internal/battery
@@ -160,7 +143,7 @@ format-full = <ramp-capacity>
 label-full-foreground = ${colors.white}
 
 format-charging = <animation-charging>
-label-charging-foreground = ${colors.white} 
+label-charging-foreground = ${colors.green} 
 
 animation-charging-0 = 󰁻
 animation-charging-1 = 󰁽
@@ -168,11 +151,11 @@ animation-charging-2 = 󰁿
 animation-charging-3 = 󰂁 
 animation-charging-4 = 󰁹
 
-animation-charging-foreground = ${colors.white}
+animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity>
-label-discharging-foreground = ${colors.white}
+label-discharging-foreground = ${colors.green}
 
 ramp-capacity-0 = 󰁻
 ramp-capacity-1 = 󰁽
@@ -180,7 +163,7 @@ ramp-capacity-2 = 󰁿
 ramp-capacity-3 = 󰂁
 ramp-capacity-4 = 󰁹
 
-ramp-capacity-foreground = ${colors.white}
+ramp-capacity-foreground = ${colors.green}
 ramp-capacity-framerate = 750
 
 [module/bluetooth]
