updated polybar config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -21,13 +21,13 @@ padding-right = 1
 
 module-margin-left = 2
 
-modules-left = bspwm
-modules-center = date
-modules-right = memory cpu temperature fanspeed pulseaudio wlan battery powermenu
+modules-left = launcher bspwm
+modules-center =
+modules-right = filesystem memory cpu temperature fanspeed pulseaudio wlan date battery
 
 include-file = $HOME/.config/polybar/fonts.ini
 
-tray-position = none
+tray-position = right
 tray-padding = 2
 
 wm-restack = bspwm
@@ -50,9 +50,9 @@ padding-right = 1
 
 module-margin-left = 2
 
-modules-left = bspwm
-modules-center = date
-modules-right = memory cpu temperature fanspeed pulseaudio wlan battery powermenu
+modules-left = launcher bspwm
+modules-center =
+modules-right = filesystem memory cpu temperature fanspeed pulseaudio wlan date battery
 
 include-file = $HOME/.config/polybar/fonts.ini
 
