--- a/.config/polybar/fonts.ini
+++ b/.config/polybar/fonts.ini
@@ -1,2 +1,3 @@
 font-0 = Iosevka Nerd Font:style=Regular:pixelsize=12;4
 font-1 = Material Design Icons:style=Regular:pixelsize=14;4
+font-2 = Material Design Icons:style=Regular:pixelsize=16;4
