--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -8,7 +8,9 @@ format-prefix-foreground = ${colors.white}
 label = CPU %percentage:0%%
 label-foreground = ${colors.white}
 
-ramp-load-0 = 󰍛    
+ramp-load-0 = 󰍛 
+ramp-load-font = 3
+ramp-load-foreground = ${colors.yellow}  
 
 [module/backlight]
 type = internal/backlight
@@ -66,18 +68,18 @@ type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
 format-prefix = "󰆼 "  
-format-prefix-foreground = ${colors.white}
+format-prefix-foreground = ${colors.cyan}
 label = %output% MB
 label-foreground = ${colors.white}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume =<ramp-volume>
+format-volume =<ramp-volume> <label-volume>
 label-volume = %percentage%%
 label-volume-foreground = ${colors.white}
 
-label-muted =󰖁
+label-muted =󰖁 MUTED
 label-muted-foreground = ${colors.red}
 
 ramp-volume-0 = 󰕾
@@ -100,8 +102,8 @@ label-warn = %temperature-c%
 ramp-0 = 󰔐
 
 label-foreground = ${colors.white}
-label-warn-foreground = ${colors.white}
-ramp-foreground = ${colors.white}
+label-warn-foreground = ${colors.red}
+ramp-foreground = ${colors.red}
 
 [module/powermenu]
 type = custom/text
@@ -114,6 +116,7 @@ click-left = ~/.config/scripts/powermenu
 [module/fanspeed]
 type = custom/script
 format-prefix = 󰈐
+format-prefix-foreground = ${colors.purple}
 exec = ~/.config/scripts/fanspeed
 interval = 10
 
@@ -122,7 +125,7 @@ type = internal/network
 interface = wlo1
 interval = 3.0
 
-format-connected = <ramp-signal>
+format-connected = <ramp-signal> <label-connected>
 label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
 
@@ -139,11 +142,11 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full = <ramp-capacity> 
+format-full = <ramp-capacity> <label-full> 
 label-full-foreground = ${colors.white}
 
-format-charging = <animation-charging>
-label-charging-foreground = ${colors.green} 
+format-charging = <animation-charging> <label-charging>
+label-charging-foreground = ${colors.white} 
 
 animation-charging-0 = 󰁻
 animation-charging-1 = 󰁽
@@ -164,9 +167,63 @@ ramp-capacity-3 = 󰂁
 ramp-capacity-4 = 󰁹
 
 ramp-capacity-foreground = ${colors.green}
+
+[module/filesystem]
+type = internal/fs
+
+; Mountpoints to display
+mount-0 = /
+;;mount-1 = /home
+;;mount-2 = /var
+
+; Seconds to sleep between updates
+; Default: 30
+interval = 120
+
+; Display fixed precision values
+; Default: false
+fixed-values = true
+
+; Spacing between entries
+; Default: 2
+;;spacing = 4
+
+format-mounted = <label-mounted>
+format-mounted-prefix = "󰇑 "
+format-mounted-prefix-font = 3
+format-mounted-prefix-foreground = ${colors.purple}
+
+format-unmounted = <label-unmounted>
+format-unmounted-prefix = 󰇑
+
+; Available tokens:
+;   %mountpoint%
+;   %type%
+;   %fsname%
+;   %percentage_free%
+;   %percentage_used%
+;   %total%
+;   %free%
+;   %used%
+; Default: %mountpoint% %percentage_free%%
+label-mounted = %used%
+
+label-unmounted = %mountpoint%: not mounted
+
 ramp-capacity-framerate = 750
 
 [module/bluetooth]
 type = custom/text
+
 content = 󰂯
+
 click-left = ~/.config/scripts/toggle-bluetooth
+
+[module/launcher]
+type = custom/text
+
+content = 󰣇
+
+content-foreground = ${colors.cyan}
+
+click-left = rofi -no-lazy-grab -show drun -theme $HOME/.config/rofi/themes/launcher.rasi
