updated polybar colors

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,18 +1,12 @@
 [colors]
 background = #1A1A1A
-background-alt = #363636
 foreground = #FFFFFF
-foreground-alt = #e5e9f0
-white = #ffffff
-cyan = #88c0d0
-green = #a3be8c
-blue = #5e81ac
-orange = #d08770
-pink = #b48ead
-purple = #8b8ed6
-red = #bf616a
-yellow = #ebcb8b
-grey = #888E96
-secondary = #e60053
-alert = #bd2c40
-transparent =  #00000000
+white  = #FFFFFF
+cyan   = #A4FFFF
+green  = #69FF94
+blue   = #D6ACFF
+orange = #FFB86C
+pink   = #FF79C6
+purple = #BD93F9
+red    = #FF6E6E
+yellow = #FFFFA5
