--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,7 +23,7 @@ module-margin-left = 2
 
 modules-left = launcher bspwm
 modules-center =
-modules-right = filesystem memory cpu temperature fanspeed pulseaudio wlan date battery
+modules-right = filesystem memory cpu temperature fanspeed pulseaudio wlan battery date
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -52,7 +52,7 @@ module-margin-left = 2
 
 modules-left = launcher bspwm
 modules-center =
-modules-right = filesystem memory cpu temperature fanspeed pulseaudio wlan date battery
+modules-right = filesystem memory cpu temperature fanspeed pulseaudio wlan battery date
 
 include-file = $HOME/.config/polybar/fonts.ini
 
