--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -31,20 +31,28 @@ ramp-foreground = ${colors.white}
 [module/bspwm]
 type = internal/bspwm
 
-format = <label-state> <label-mode>
+ws-icon-0 = 1;TERM
+ws-icon-1 = 2;SYS
+ws-icon-2 = 3;WEB
+ws-icon-3 = 4;MUSIC
+ws-icon-4 = 5;GAME
+ws-icon-default = "♟ "
 
-label-focused = 󰄯
+format = <label-state>
+
+label-focused = [ %icon% ]
+label-focused-foreground = ${colors.red}
 label-focused-padding = 1
 
-label-occupied = 󰐾
+label-occupied = %icon%
 label-occupied-padding = 1
 
-label-urgent = 󰐾
+label-urgent = %icon%
 label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
-label-empty = 󰄰
-label-empty-foreground = ${colors.white}
+label-empty = %icon%
+label-empty-foreground = ${colors.grey}
 label-empty-padding = 1
 
 [module/date]
@@ -157,8 +165,8 @@ animation-charging-4 = 󰁹
 animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
-format-discharging = <ramp-capacity>
-label-discharging-foreground = ${colors.green}
+format-discharging = <ramp-capacity> <label-discharging>
+label-discharging-foreground = ${colors.white}
 
 ramp-capacity-0 = 󰁻
 ramp-capacity-1 = 󰁽
